# datec

./: .gitignore  README.md  pyproject.toml  requirements-dev.in  setup.py
datec/: __init__.py  __main__.py
tests/: datec_test.py
